# big_parser_mario

./: .gitignore  README.md  pyproject.toml
parse_programm/: constants.py  frames.py  main.py.py  utils.py
